Worked on some stuff

--- a/main.html
+++ b/main.html
@@ -1,8 +1,19 @@
-<!DOCTYPE=html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>
       AmethystXx
     </title>
+    <style>
+      body {
+        background-color: blueviolet;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
+  <body>
+    <h1>
+      AmethystXx's abomination of a website
+    </h1>
+  </body>
 </html>
