--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      AmethystXx
-    </title>
-    <style>
-      body {
-        background-color: blueviolet;
-        font-family: sans-serif;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>
-      AmethystXx's abomination of a website
-    </h1>
-  </body>
+    <head>
+        <title>
+            AmethystXx
+        </title>
+        <style>
+            #title {
+                width: 90vw;
+                border: 10px solid black;
+                padding: 20px;
+                margin: auto;
+                border-radius: 20px;
+                text-align: center;
+                background-image:url(amethyst.jpeg);
+            }
+            body {
+                background-color:white;
+            }
+            h1 {
+                color:black;
+                font-size: 50px;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="title">
+            <h1>AmethystXx</h1>
+        </div>
+    </body>
 </html>
