--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 background-color:white;
             }
             h1 {
-                color:black;
+                color:white;
                 font-size: 50px;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             }
