added icon and changed a file name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 margin: auto;
                 border-radius: 20px;
                 text-align: center;
-                background-image:url(amethyst.jpeg);
+                background-image:url(title.jpeg);
             }
             body {
                 background-color:white;
@@ -23,6 +23,7 @@
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             }
         </style>
+        <link rel="icon" href="icon_path" type="favicon.jpg">
     </head>
     <body>
         <div id="title">
