--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             }
         </style>
-        <link rel="icon" href="icon_path" type="favicon.jpg">
+        <link rel="icon" href="favicon.jpg" type=image/x-icon>
     </head>
     <body>
         <div id="title">
