changed the width of the title

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         </title>
         <style>
             #title {
-                width: 90vw;
+                width: vw;
                 border: 10px solid black;
-                padding: 20px;
+                padding: 50px;
                 margin: auto;
                 border-radius: 20px;
                 text-align: center;
