made text white again

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 background-color:white;
             }
             h1 {
-                color:black;
-                font-size: 50px;
+                color:white;
+                font-size: 70px;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             }
         </style>
