--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 border-radius: 20px;
                 text-align: center;
                 background-image:url(title.jpeg);
+                text-shadow:0px 0px 20px black
             }
             body {
                 background-color:white;
