separated html and css files

--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
         <title>
             AmethystXx
         </title>
-        <style>
-            #title {
-                width: vw;
-                border: 10px solid black;
-                padding: 50px;
-                margin: auto;
-                border-radius: 20px;
-                text-align: center;
-                background-image:url(title.jpeg);
-                text-shadow:0px 0px 20px black
-            }
-            body {
-                background-color:white;
-            }
-            h1 {
-                color:white;
-                font-size: 70px;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.jpg" type=image/x-icon>
     </head>
     <body>
