--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="favicon.jpg" type=image/x-icon>
     </head>
     <body>
-        <div id="title" class="blur">
+        <div id="title">
             <h1>AmethystXx</h1>
         </div>
     </body>
