--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <div id="title">
             <h1>AmethystXx</h1>
         </div>
+        <footer>
+            <p>Made by AmethystXx.<br>
+            <a href="github.com/amthystxx">Github</a></p>
+        </footer>
     </body>
 </html>
