hopefully fixed footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>AmethystXx</h1>
         </div>
         <footer>
-            <p>Made by AmethystXx.<br>
+            <p>- Made by AmethystXx. -<br>
             <a href="github.com/amthystxx">Github</a></p>
         </footer>
     </body>
