organized the css file a bit better

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1>AmethystXx</h1>
         </div>
         <footer>
-            <p>- Made by AmethystXx. -<br>
-            <a href="github.com/amthystxx">Github</a></p>
+            <p>- Made by AmethystXx -<br>
+            <a href="https://www.github.com/amthystxx">Github</a></p>
         </footer>
     </body>
 </html>
