fixed quotation marks

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <h2>About Me</h2>
-        <p>"I'm a Beat Saber player and custom mapper (as you may have seen from my youtube), and I also make Minecraft datapacks. I also love programming, which is why I chose to make this website with raw code rather than something like google sites. 😅<br><br>If you want to play my Beat Saber maps, you can find them on my <a href="https://beatsaver.com/profile/151745">Beatsaver</a>, and if you want to find my Minecraft datapacks, you can find them on my <a href="https://modrinth.com/user/AmethystXx_">Modrinth</a>!"</p> 
+        <p>I'm a Beat Saber player and custom mapper (as you may have seen from my youtube), and I also make Minecraft datapacks. I also love programming, which is why I chose to make this website with raw code rather than something like google sites. 😅<br><br>If you want to play my Beat Saber maps, you can find them on my <a href="https://beatsaver.com/profile/151745">Beatsaver</a>, and if you want to find my Minecraft datapacks, you can find them on my <a href="https://modrinth.com/user/AmethystXx_">Modrinth</a>!</p> 
 
         <footer>
             <p>- Made by AmethystXx -<br>
