--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <h2>About Me:</h2>
         </div>
 
-        <p>I'm a Beat Saber player and custom mapper (as you may have seen from my youtube), and I also make Minecraft datapacks. I also love programming, which is why I chose to make this website with raw code rather than something like google sites. 😅<br><br>If you want to play my Beat Saber maps, you can find them on my <a href="https://beatsaver.com/profile/151745">Beatsaver</a>, and if you want to find my Minecraft datapacks, you can find them on my <a href="https://modrinth.com/user/AmethystXx_">Modrinth</a>!</p> 
+        <div class="text">
+            <p>I'm a Beat Saber player and custom mapper (as you may have seen from my youtube), and I also make Minecraft datapacks. I also love programming, which is why I chose to make this website with raw code rather than something like google sites. 😅<br><br>If you want to play my Beat Saber maps, you can find them on my <a href="https://beatsaver.com/profile/151745">Beatsaver</a>, and if you want to find my Minecraft datapacks, you can find them on my <a href="https://modrinth.com/user/AmethystXx_">Modrinth</a>!</p> 
+        </div>
 
         <footer>
             <p>- Made by AmethystXx -<br>
