--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <script src="main.js"></script>
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#youtube">News</a>
+        </div>
 
         <div id="title">
             <h1>AmethystXx</h1>
