--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#youtube">News</a>
+            <a href="#youtube">Youtube</a>
         </div>
 
         <div id="title">
