--- a/youtube.html
+++ b/youtube.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+        <title>
+            AmethystXx
+        </title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="img/favicon.jpg" type=image/x-icon>
   </head>
   <body>
-    
+        <div class="topnav">
+            <a href="#home">Home</a>
+            <a class="active" href="#youtube">Youtube</a>
+        </div>
   </body>
 </html>
