--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#youtube">Youtube</a>
+            <a class="active" href="https://amthystxx.github.io/index">Home</a>
+            <a href="https://amthystxx.github.io/youtube">Youtube</a>
         </div>
 
         <br>
