fix links in navbar

--- a/youtube.html
+++ b/youtube.html
@@ -9,8 +9,8 @@
   </head>
   <body>
         <div class="topnav">
-            <a href="#home">Home</a>
-            <a class="active" href="#youtube">Youtube</a>
+            <a href="https://amthystxx.github.io/">Home</a>
+            <a class="active" href="https://amthystxx.github.io/youtube">Youtube</a>
         </div>
   </body>
 </html>
