fix changes in navbar... again...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="https://amthystxx.github.io/index">Home</a>
+            <a class="active" href="https://amthystxx.github.io/">Home</a>
             <a href="https://amthystxx.github.io/youtube">Youtube</a>
         </div>
 
