add content to YouTube page

--- a/youtube.html
+++ b/youtube.html
@@ -12,5 +12,22 @@
             <a href="https://amthystxx.github.io/">Home</a>
             <a class="active" href="https://amthystxx.github.io/youtube">Youtube</a>
         </div>
+
+        <div id="title">
+            <h1>Youtube</h1>
+        </div>
+
+        <div class="section-header">
+            <h2>My channels:</h2>
+        </div>
+
+        <div class="text">
+            <p>I have two youtube channels (and a secret third one coming soon!) that I post to. One is for main content, and one is for stuff that I do on the side.<br>My main channel is <a href="https://youtube.com/@amthystxx">AmethystXx</a>, and my second channel is <a href="https://youtube.com/@amthystxx2.0">TopazXx</a>.</p> 
+        </div>
+
+        <footer>
+            <p>- Made by AmethystXx -<br>
+            <a href="https://www.github.com/amthystxx">Github</a></p>
+        </footer>
   </body>
 </html>
