--- a/youtube.html
+++ b/youtube.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="text">
-            <p>I have two youtube channels (and a secret third one coming soon!) that I post to. One is for main content, and one is for stuff that I do on the side.<br>My main channel is <a href="https://youtube.com/@amthystxx">AmethystXx</a>, and my second channel is <a href="https://youtube.com/@amthystxx2.0">TopazXx</a>.</p> 
+            <p>I have two youtube channels (and a secret third one coming soon!) that I post to. One is for main content, and one is for stuff that I do on the side.<br>My main channel is <a href="https://youtube.com/@amthystxx">AmethystXx</a>, and my second channel is <a href="https://youtube.com/@amethystxx2.0">TopazXx</a>.</p> 
         </div>
 
         <footer>
