add tab for contact page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="topnav">
             <a class="active" href="https://amthystxx.github.io/">Home</a>
             <a href="https://amthystxx.github.io/youtube">Youtube</a>
+            <a href="https://amthystxx.github.io/contact">Contact</a>
         </div>
 
         <br>
