add contact tab

--- a/youtube.html
+++ b/youtube.html
@@ -11,6 +11,7 @@
         <div class="topnav">
             <a href="https://amthystxx.github.io/">Home</a>
             <a class="active" href="https://amthystxx.github.io/youtube">Youtube</a>
+            <a href="https://amthystxx.github.io/contact">Contact</a>
         </div>
 
         <br>
