Update and rename contact.html to geode.html

--- a/geode.html
+++ b/geode.html
@@ -12,13 +12,13 @@
         <div class="topnav">
             <a href="https://amthystxx.github.io/">Home</a>
             <a href="https://amthystxx.github.io/youtube">Youtube</a>
-            <a class="active", href="https://amthystxx.github.io/contact">Contact</a>
+            <a class="active", href="https://amthystxx.github.io/geode">Geode</a>
         </div>
 
         <br>
 
         <div id="title">
-            <h1>Contact</h1>
+            <h1>Geode</h1>
         </div>
       
         <footer>
