--- a/geode.html
+++ b/geode.html
@@ -20,6 +20,14 @@
         <div id="title">
             <h1>Geode</h1>
         </div>
+
+        <div class="section-header">
+            <h2>About Geode</h2>
+        <div>
+
+        <div class="text">
+            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively. </p>
+        </div>
       
         <footer>
             <p>- Made by AmethystXx -<br>
