--- a/geode.html
+++ b/geode.html
@@ -23,10 +23,18 @@
 
         <div class="section-header">
             <h2>About Geode</h2>
-        <div>
+        </div>
 
         <div class="text">
-            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively. </p>
+            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively.<br>Geode adds the ability to add custom blocks, items, and totems; add right click detection to your items; and save arbitrary data to players or other entities.<br>Future features include:<br>Custom arrows and raycasting for items.</p>
+        </div>
+
+        <div class="section-header">
+            <h2>Contributors</h2>
+        </div>
+
+        <div class="text">
+            <p>AmethystXx: Lead developer, wrote most of the code for the the custom totems system, the custom items system, the arbitrary player data system, and heavily modified Admin's custom block system.<br>MyNameIsBhex: Helped with the custom items system and is developing the custom arrows system.<br>Admin from WASD Build Team: Made the tutorial for custom blocks that I followed and modified to use in BlockCore/Geode, also helped me fix a bug in custom totems.<br>Helpers from Datapack Hub: Helped me with the arbitrary player data system and fixing other bugs in the datapack.</p>
         </div>
       
         <footer>
