--- a/geode.html
+++ b/geode.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="text">
-            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively.<br>Geode adds the ability to add custom blocks, items, and totems; add right click detection to your items; and save arbitrary data to players or other entities.<br>Future features include:<br>Custom arrows and raycasting for items.</p>
+            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively.<br><br>Geode adds the ability to add custom blocks, items, and totems; add right click detection to your items; and save arbitrary data to players or other entities.<div class="small-header">Future features include:<br>Custom arrows and raycasting for items.</div></p>
         </div>
 
         <div class="section-header">
@@ -34,7 +34,7 @@
         </div>
 
         <div class="text">
-            <p>AmethystXx: Lead developer, wrote most of the code for the the custom totems system, the custom items system, the arbitrary player data system, and heavily modified Admin's custom block system.<br>MyNameIsBhex: Helped with the custom items system and is developing the custom arrows system.<br>Admin from WASD Build Team: Made the tutorial for custom blocks that I followed and modified to use in BlockCore/Geode, also helped me fix a bug in custom totems.<br>Helpers from Datapack Hub: Helped me with the arbitrary player data system and fixing other bugs in the datapack.</p>
+            <p><div class="small-header">AmethystXx:</div>Lead developer, wrote most of the code for the the custom totems system, the custom items system, the arbitrary player data system, and heavily modified Admin's custom block system.<div class="small-header">MyNameIsBhex:</div>Helped with the custom items system and is developing the custom arrows system.<div class="small-header">Admin</div> from WASD Build Team: Made the tutorial for custom blocks that I followed and modified to use in BlockCore/Geode, also helped me fix a bug in custom totems.<div class="small-header">Helpers from Datapack Hub:</div> Helped me with the arbitrary player data system and fixing other bugs in the datapack.</p>
         </div>
       
         <footer>
