--- a/geode.html
+++ b/geode.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="text">
-            <p><div class="small-header">AmethystXx:</div>Lead developer, wrote most of the code for the the custom totems system, the custom items system, the arbitrary player data system, and heavily modified Admin's custom block system.<div class="small-header">MyNameIsBhex:</div>Helped with the custom items system and is developing the custom arrows system.<div class="small-header">Admin</div> from WASD Build Team: Made the tutorial for custom blocks that I followed and modified to use in BlockCore/Geode, also helped me fix a bug in custom totems.<div class="small-header">Helpers from Datapack Hub:</div> Helped me with the arbitrary player data system and fixing other bugs in the datapack.</p>
+            <p><div class="small-header"><h3>AmethystXx:</h3></div>Lead developer, wrote most of the code for the the custom totems system, the custom items system, the arbitrary player data system, and heavily modified Admin's custom block system.<div class="small-header"><h3>MyNameIsBhex:</h3></div>Helped with the custom items system and is developing the custom arrows system.<div class="small-header"><h3>Admin from WASD Build Team:</h3></div> Made the tutorial for custom blocks that I followed and modified to use in BlockCore/Geode, also helped me fix a bug in custom totems.<div class="small-header"><h2>Helpers from Datapack Hub:</h2></div>Helped me with the arbitrary player data system and fixing other bugs in the datapack.</p>
         </div>
       
         <footer>
