--- a/geode.html
+++ b/geode.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="text">
-            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively.<br><br>Geode adds the ability to add custom blocks, items, and totems; add right click detection to your items; and save arbitrary data to players or other entities.<div class="small-header">Future features include:</div>Custom arrows and raycasting for items.<br><br>Get Geode <a href="https://github.com/AmthystXx/Geode">here</a>!</div></p>
+            <p>Geode is a datapack library for the newest version of Minecraft. When new versions of the game comes out, changes to Geode will likely not be made retroactively.<br><br>Geode adds the ability to add custom blocks, items, and totems; add right click detection to your items; and save arbitrary data to players or other entities.<br><br><div class="small-header">Get Geode <a href="https://github.com/AmthystXx/Geode">here</a>!</div></div></p>
         </div>
 
         <div class="section-header">
